task-2/kubernetes-deployments/flaskapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-webapp
  name: flask-webapp
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask-webapp
  type: ClusterIP
